@@ -1,3 +1,13 @@
+Sat Oct 14 12:39:53 2000  George Lebl <jirka@5z.com>
+
+	* gen_util/mail_check.c: Sanity, fix minor mem leak and some
+	  cleanups, god does this code suck.
+
+2000-10-14 Dirk-Jan C. Binnema <dirkjan@gnome.org>
+
+        * gen_util/mail_check.c: have the mailcheck applet check the
+	  mail immediately at startup time
+
 2000-10-14 John Fleck <jfleck@inkstain.net>
 
 	* gen_util/help/C/printer/printer-applet.sgml, printer.sgml -
@@ -9,7 +19,6 @@
 	mailcheck.sgml - updating docs for 1.4 compatibility (patch from
 	Greg Leblanc)
 	
-
 2000-10-10 John Fleck <jfleck@inkstain.net>
 
 	* gen_util/help/C/clock/clock-applet.sgml and clock.sgml
